--- a/GeneralClashConfig.yaml
+++ b/GeneralClashConfig.yaml
@@ -126,6 +126,7 @@ NodeParam: &NodeParam {type: http, override: {udp: true, skip-cert-verify: true}
 
 proxy-providers: 
 
+
 RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
 RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
 RuleSetIpcidr: &RuleSetIpcidr {type: http, behavior: ipcidr, interval: 86400, proxy: DIRECT}
@@ -339,9 +340,8 @@ rule-providers:
 
 FilterCrypto: &FilterCrypto '^(?=.*((?i)🇸🇬|坡|狮|SG|Singapore|台|新北|彰化|TW|Taiwan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterUS: &FilterUS '^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
-FilterTW: &FilterTW '^(?=.*((?i)台|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterHK: &FilterHK '^(?=.*((?i)港|(\b(HK|Hong Kong)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
-FilterChat: &FilterChat '^(?=.*((?i)台|tw|taiwan|Chat|GPT))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterChat: &FilterChat '(Reality台|tw|taiwan|Chat|GPT)'
 
 UrlTest: &UrlTest 
   type: url-test
@@ -374,28 +374,20 @@ Select: &Select
   timeout: 1000
   max-failed-times: 3
 
-Fallback: &Fallback
-  type: fallback
-  disable-udp: false
-  hidden: false
-  lazy: true
-  interval: 300
-  timeout: 1000
-  max-failed-times: 3
-
-pr: &pr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 1000, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🐔 落地鸡-Fallback, 🇺🇲 美国节点, ♻️ 自动选择]}
-twPr: &twPr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 1000, proxies: [🇨🇳 台湾节点, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+pr: &pr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 1000, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+twPr: &twPr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 1000, proxies: [🗨 GPT节点, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
 directPr: &directPr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 1000, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
 
 proxy-groups: 
-  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, 🇨🇳 台湾节点, 🇭🇰 香港节点, 🐔 落地鸡, 🐔 落地鸡-Fallback, ♻️ 自动选择, DIRECT]}
+  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, 🗨 GPT节点, 🇭🇰 香港节点, 🐔 落地鸡, ♻️ 自动选择, DIRECT]}
   - {name: 🔥 手动切换, <<: *SelectAll}
+  - {name: ⏳ 测速吧, <<: *SelectAll}
   - {name: ♻️ 自动选择, <<: *UrlTest}
   - {name: 🅱️ Crypto, <<: *SelectAll, filter: *FilterCrypto}
   - {name: 🆎 AdBlock, type: select, proxies: [REJECT, DIRECT]}
   - {name: 🍎 苹果服务, <<: *directPr}
   - {name: 🇬 Google, <<: *pr}
-  - {name: 🤖 Chat服务, <<: *SelectAll, filter: *FilterChat}
+  - {name: 🤖 Chat服务, <<: *Select, proxies: [🗨 GPT节点, 🐔 落地鸡, 🔥 手动切换]}
   - {name: 📹 油管视频, <<: *pr}
   - {name: 👨‍💻‍ Github, <<: *pr}
   - {name: 💬 自由消息, <<: *pr}
@@ -403,17 +395,27 @@ proxy-groups:
   - {name: Ⓜ️ 微软云盘, <<: *directPr}
   - {name: Ⓜ️ 微软服务, <<: *directPr}
   - {name: 🐔 落地鸡, <<: *Select, use: [vps]}
-  - {name: 🐔 落地鸡-Fallback, <<: *Fallback, use: [vps-fallback]}
   - {name: 🐚 贝贝云, <<: *Select, use: [beibei]}
   - {name: 🐶 泡泡狗, <<: *Select, use: [paopaodog]}
   - {name: 🚁 机场cordc, <<: *Select, use: [cordc]}
   - {name: ✈️ boostnet1, <<: *Select, use: [boostnet1]}
   - {name: 🇺🇲 美国节点, <<: *UrlTest, filter: *FilterUS}
-  - {name: 🇨🇳 台湾节点, <<: *UrlTest, filter: *FilterTW}
+  - {name: 🗨 GPT节点, <<: *UrlTest, filter: *FilterChat}
   - {name: 🇭🇰 香港节点, <<: *UrlTest, filter: *FilterHK}
-  - {name: 🐟 漏网之鱼, type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 600, proxies: [DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🚀 节点选择]}
+  - {name: 🐟 漏网之鱼, type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 600, proxies: [DIRECT, 🇭🇰 香港节点, 🇺🇲 美国节点, 🚀 节点选择]}
 
 rules:
+  - DOMAIN-SUFFIX,ip.gs,⏳ 测速吧
+  - DOMAIN-SUFFIX,ip.sb,⏳ 测速吧
+  - DOMAIN-SUFFIX,ipino.io,⏳ 测速吧
+  - DOMAIN-SUFFIX,ipleak.net,⏳ 测速吧
+  - DOMAIN-SUFFIX,dnsleaktest.com,⏳ 测速吧
+  - DOMAIN-SUFFIX,ipaddress.my,⏳ 测速吧
+  - DOMAIN-SUFFIX,fast.com,⏳ 测速吧
+  - DOMAIN-SUFFIX,speedtest.net,⏳ 测速吧
+  - DOMAIN-SUFFIX,speedtest.frontier.com,⏳ 测速吧
+  - DOMAIN-SUFFIX,speedtestcustom.com,⏳ 测速吧
+  - DOMAIN-SUFFIX,speed.cloudflare.com,⏳ 测速吧
   - RULE-SET,myproxy,🚀 节点选择
   - RULE-SET,mycrypto,🅱️ Crypto
   - RULE-SET,mybinance,🅱️ Crypto
